--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
     <div class="container-fluid no-padding">
       <nav class="navbar navbar-default cpal-navbar-global">
         <div class="cpal-nav-bar">
+            <div class="container no-padding container-logo">
+            <a href="" class="logo"><img src="./site/images/logo.png" alt="logo_cpal"></a>
+            </div>
             <div class="navbar-header">
               <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                 <span class="sr-only">Toggle navigation</span>
@@ -42,9 +45,11 @@
             </div>
             <div class="collapse navbar-collapse navbar-right cpal-navbar-right" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav cpal-menu-bar">
+                <!--
                 <li class="logo">
                   <a href=""><img src="./site/images/logo.png" alt="logo_cpal"></a>
                 </li>
+                -->
                 <li class="select"><a href="#">HOME</a></li>
                 <li>
                   <a href="#" > ACERCA DE CPAL</a>
