add responsive, add image in footer

--- a/index.html
+++ b/index.html
@@ -45,11 +45,6 @@
             </div>
             <div class="collapse navbar-collapse navbar-right cpal-navbar-right" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav cpal-menu-bar">
-                <!--
-                <li class="logo">
-                  <a href=""><img src="./site/images/logo.png" alt="logo_cpal"></a>
-                </li>
-                -->
                 <li class="select"><a href="#">HOME</a></li>
                 <li>
                   <a href="#" > ACERCA DE CPAL</a>
@@ -127,100 +122,100 @@
               </div>
               <div class="col-md-2 col-md-offset-1 cpal-card">
                 <div class="row">
-                  <div class="col-md-2">
+                  <div class="col-md-2 col-xs-3">
                     <h3>1</h3>
                   </div>
-                  <div class="col-md-10">
+                  <div class="col-md-10 col-xs-9">
                     <p>Asistirán los palmeros más importantes de la región Centro Americana, México, Colombia y Ecuador.</p>
                   </div>
                 </div>
               </div>
               <div class="col-md-2 cpal-card">
                 <div class="row">
-                  <div class="col-md-2">
+                  <div class="col-md-2 col-xs-3">
                     <h3>2</h3>
                   </div>
-                  <div class="col-md-10">
+                  <div class="col-md-10 col-xs-9">
                     <p>Tendrá la oportunidad de generar relaciones comerciales, así como, crear contactos profesionales y de negocios.</p>
                   </div>
                 </div>
               </div>
-              <div class="col-md-2 cpal-card cpal-card-min-text">
+              <div class="col-md-2 cpal-card cpal-card-min-text ">
                 <div class="row">
-                  <div class="col-md-2">
+                  <div class="col-md-2 col-xs-3">
                     <h3>3</h3>
                   </div>
-                  <div class="col-md-10">
+                  <div class="col-md-10 col-xs-9">
                     <p>Podrá conocer las tendencias de punta que el sector palmicultor a nivel mundial está implementando para garantizar un mayor rendimiento en sus operaciones.</p>
                   </div>
                 </div>
               </div>
               <div class="col-md-2 cpal-card">
                 <div class="row">
-                  <div class="col-md-2">
+                  <div class="col-md-2 col-xs-3">
                     <h3>4</h3>
                   </div>
-                  <div class="col-md-10">
+                  <div class="col-md-10 col-xs-9">
                     <p>Es el entorno ideal para intercambiar ideas e inquietudes para la búsqueda de soluciones.</p>
                   </div>
                 </div>
               </div>
               <div class="col-md-2 cpal-card">
                 <div class="row">
-                  <div class="col-md-2">
+                  <div class="col-md-2 col-xs-3">
                     <h3>5</h3>
                   </div>
-                  <div class="col-md-10">
+                  <div class="col-md-10 col-xs-9">
                     <p>Podrá conocer lo que Guatemala está haciendo, su enfoque y visión acerca del cultivo.</p>
                   </div>
                 </div>
               </div>
               <div class="col-md-2 col-md-offset-1 cpal-card">
                 <div class="row">
-                  <div class="col-md-2">
+                  <div class="col-md-2 col-xs-3">
                     <h3>6</h3>
                   </div>
-                  <div class="col-md-10">
+                  <div class="col-md-10 col-xs-9">
                     <p>Conocerá las perspectivas económicas del aceite de palma para la toma correcta de decisiones.</p>
                   </div>
                 </div>
               </div>
               <div class="col-md-2 cpal-card">
                 <div class="row">
-                  <div class="col-md-2">
+                  <div class="col-md-2 col-xs-3">
                     <h3>7</h3>
                   </div>
-                  <div class="col-md-10">
+                  <div class="col-md-10 col-xs-9">
                     <p>Contará con información para elaborar cuadros comparativos de buenas prácticas y los resultados obtenidos.</p>
                   </div>
                 </div>
               </div>
               <div class="col-md-2 cpal-card cpal-card-min-text">
                 <div class="row">
-                  <div class="col-md-2">
+                  <div class="col-md-2 col-xs-3">
                     <h3>8</h3>
                   </div>
-                  <div class="col-md-10">
+                  <div class="col-md-10 col-xs-9">
                     <p>Tendrá la oportunidad de conocer las experiencias y los casos de éxito de profesionales destacados nacionales e internacionales en palma.</p>
                   </div>
                 </div>
               </div>
               <div class="col-md-2 cpal-card">
                 <div class="row">
-                  <div class="col-md-2">
+                  <div class="col-md-2 col-xs-3">
                     <h3>9</h3>
                   </div>
-                  <div class="col-md-10">
+                  <div class="col-md-10 col-xs-9">
                     <p>Conocerá modelos interesantes del manejo en el tema social y ambiental.</p>
                   </div>
                 </div>
               </div>
               <div class="col-md-2 cpal-card">
                 <div class="row">
-                  <div class="col-md-2">
+                  <div class="col-md-2 col-xs-3">
                     <h3>10</h3>
                   </div>
-                  <div class="col-md-10">
+                  <div class="col-md-10 col-xs-9">
                     <p>Tendrá la oportunidad de conocer plantaciones y plantas extractoras exitosas del país.</p>
                   </div>
                 </div>
@@ -414,7 +409,7 @@
                         </div>
                       </div>
                       <div class="row">
-                        <button type="submit" class="btn cpal-submit pull-right">
+                        <button type="submit" class="btn cpal-submit pull-right col-xs-12">
                             Continuar
                         </button>
                       </div>
@@ -432,7 +427,11 @@
         <div class="container">
 
           <div class="col-md-12">
-            <p>© 2016 C//PAL Congreso Palmero GREPALMA. Todos los Derechos Reservados</p>
+            <p>© 2016 C//PAL Congreso Palmero GREPALMA. Todos los Derechos Reservados
+            &nbsp;&nbsp;
+            <a href=""><img src="./site/images/facebook.png" alt=""></a>
+            <a href=""><img src="./site/images/youtube.png" alt=""></a>
+            </p>
           </div>
 
         </div>
