add class in button

--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
                         </div>
                       </div>
                       <div class="row">
-                        <button type="submit" class="btn cpal-submit pull-right col-xs-12">
+                        <button type="submit" class="btn cpal-submit pull-right col-md-2 col-xs-12">
                             Continuar
                         </button>
                       </div>
