--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <title>home page</title>
 
     <!-- Bootstrap core CSS -->
+    <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet' type='text/css'>
     <link href="./site/3rdparty/font/font.css" rel="stylesheet">
     <link href="./site/3rdparty/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="./site/3rdparty/bootstrap/css/bootstrap-theme.min.css" rel="stylesheet">
@@ -120,103 +121,107 @@
                   A continuación numeramos diez razones por las cuales usted debe asistir:
                 </h2>
               </div>
-              <div class="col-md-2 col-md-offset-1 cpal-card">
-                <div class="row">
-                  <div class="col-md-2 col-xs-3">
-                    <h3>1</h3>
+              <div class="row">
+                <div class="col-md-2 cpal-card">
+                  <div class="row">
+                    <div class="col-md-2 col-sm-4 col-xs-3">
+                      <h3>1</h3>
+                    </div>
+                    <div class="col-md-9 col-sm-8 col-xs-9">
+                      <p>Asistirán los palmeros más importantes de la región Centro Americana, México, Colombia y Ecuador.</p>
+                    </div>
                   </div>
-                  <div class="col-md-10 col-xs-9">
-                    <p>Asistirán los palmeros más importantes de la región Centro Americana, México, Colombia y Ecuador.</p>
+                </div>
+                <div class="col-md-2 cpal-card">
+                  <div class="row">
+                    <div class="col-md-2 col-xs-3">
+                      <h3>2</h3>
+                    </div>
+                    <div class="col-md-9 col-xs-9">
+                      <p>Tendrá la oportunidad de generar relaciones comerciales, así como, crear contactos profesionales y de negocios.</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-2 cpal-card cpal-card-min-text ">
+                  <div class="row">
+                    <div class="col-md-2 col-xs-3">
+                      <h3>3</h3>
+                    </div>
+                    <div class="col-md-9 col-xs-9">
+                      <p>Podrá conocer las tendencias de punta que el sector palmicultor a nivel mundial está implementando para garantizar un mayor rendimiento en sus operaciones.</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-2 cpal-card">
+                  <div class="row">
+                    <div class="col-md-2 col-xs-3">
+                      <h3>4</h3>
+                    </div>
+                    <div class="col-md-9 col-xs-9">
+                      <p>Es el entorno ideal para intercambiar ideas e inquietudes para la búsqueda de soluciones.</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-2 cpal-card">
+                  <div class="row">
+                    <div class="col-md-2 col-xs-3">
+                      <h3>5</h3>
+                    </div>
+                    <div class="col-md-9 col-xs-9">
+                      <p>Podrá conocer lo que Guatemala está haciendo, su enfoque y visión acerca del cultivo.</p>
+                    </div>
                   </div>
                 </div>
               </div>
-              <div class="col-md-2 cpal-card">
-                <div class="row">
-                  <div class="col-md-2 col-xs-3">
-                    <h3>2</h3>
-                  </div>
-                  <div class="col-md-10 col-xs-9">
-                    <p>Tendrá la oportunidad de generar relaciones comerciales, así como, crear contactos profesionales y de negocios.</p>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-2 cpal-card cpal-card-min-text ">
-                <div class="row">
-                  <div class="col-md-2 col-xs-3">
-                    <h3>3</h3>
-                  </div>
-                  <div class="col-md-10 col-xs-9">
-                    <p>Podrá conocer las tendencias de punta que el sector palmicultor a nivel mundial está implementando para garantizar un mayor rendimiento en sus operaciones.</p>
+              <div class="row">
+                <div class="col-md-2 cpal-card">
+                  <div class="row">
+                    <div class="col-md-2 col-xs-3">
+                      <h3>6</h3>
+                    </div>
+                    <div class="col-md-9 col-xs-9">
+                      <p>Conocerá las perspectivas económicas del aceite de palma para la toma correcta de decisiones.</p>
+                    </div>
                   </div>
                 </div>
-              </div>
-              <div class="col-md-2 cpal-card">
-                <div class="row">
-                  <div class="col-md-2 col-xs-3">
-                    <h3>4</h3>
-                  </div>
-                  <div class="col-md-10 col-xs-9">
-                    <p>Es el entorno ideal para intercambiar ideas e inquietudes para la búsqueda de soluciones.</p>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-2 cpal-card">
-                <div class="row">
-                  <div class="col-md-2 col-xs-3">
-                    <h3>5</h3>
-                  </div>
-                  <div class="col-md-10 col-xs-9">
-                    <p>Podrá conocer lo que Guatemala está haciendo, su enfoque y visión acerca del cultivo.</p>
+                <div class="col-md-2 cpal-card">
+                  <div class="row">
+                    <div class="col-md-2 col-xs-3">
+                      <h3>7</h3>
+                    </div>
+                    <div class="col-md-9 col-xs-9">
+                      <p>Contará con información para elaborar cuadros comparativos de buenas prácticas y los resultados obtenidos.</p>
+                    </div>
                   </div>
                 </div>
-              </div>
-              <div class="col-md-2 col-md-offset-1 cpal-card">
-                <div class="row">
-                  <div class="col-md-2 col-xs-3">
-                    <h3>6</h3>
-                  </div>
-                  <div class="col-md-10 col-xs-9">
-                    <p>Conocerá las perspectivas económicas del aceite de palma para la toma correcta de decisiones.</p>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-2 cpal-card">
-                <div class="row">
-                  <div class="col-md-2 col-xs-3">
-                    <h3>7</h3>
-                  </div>
-                  <div class="col-md-10 col-xs-9">
-                    <p>Contará con información para elaborar cuadros comparativos de buenas prácticas y los resultados obtenidos.</p>
+                <div class="col-md-2 cpal-card cpal-card-min-text">
+                  <div class="row">
+                    <div class="col-md-2 col-xs-3">
+                      <h3>8</h3>
+                    </div>
+                    <div class="col-md-9 col-xs-9">
+                      <p>Tendrá la oportunidad de conocer las experiencias y los casos de éxito de profesionales destacados nacionales e internacionales en palma.</p>
+                    </div>
                   </div>
                 </div>
-              </div>
-              <div class="col-md-2 cpal-card cpal-card-min-text">
-                <div class="row">
-                  <div class="col-md-2 col-xs-3">
-                    <h3>8</h3>
-                  </div>
-                  <div class="col-md-10 col-xs-9">
-                    <p>Tendrá la oportunidad de conocer las experiencias y los casos de éxito de profesionales destacados nacionales e internacionales en palma.</p>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-2 cpal-card">
-                <div class="row">
-                  <div class="col-md-2 col-xs-3">
-                    <h3>9</h3>
-                  </div>
-                  <div class="col-md-10 col-xs-9">
-                    <p>Conocerá modelos interesantes del manejo en el tema social y ambiental.</p>
+                <div class="col-md-2 cpal-card">
+                  <div class="row">
+                    <div class="col-md-2 col-xs-3">
+                      <h3>9</h3>
+                    </div>
+                    <div class="col-md-9 col-xs-9">
+                      <p>Conocerá modelos interesantes del manejo en el tema social y ambiental.</p>
+                    </div>
                   </div>
                 </div>
-              </div>
-              <div class="col-md-2 cpal-card">
-                <div class="row">
-                  <div class="col-md-2 col-xs-3">
-                    <h3>10</h3>
-                  </div>
-                  <div class="col-md-10 col-xs-9">
-                    <p>Tendrá la oportunidad de conocer plantaciones y plantas extractoras exitosas del país.</p>
+                <div class="col-md-2 cpal-card">
+                  <div class="row">
+                    <div class="col-md-2 col-xs-3">
+                      <h3>10</h3>
+                    </div>
+                    <div class="col-md-9 col-xs-9">
+                      <p>Tendrá la oportunidad de conocer plantaciones y plantas extractoras exitosas del país.</p>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -258,7 +263,7 @@
               </p>
             </div>
 
-            <div class="cpal-tabs">
+            <div class="cpal-tabs col-md-10 col-md-offset-1">
               <!-- Nav tabs -->
               <ul class="nav nav-tabs" role="tablist">
                 <li role="presentation" class="active col-md-3 col-xs-12"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">DATOS DEL PARTICIPANTE</a></li>
